Updaded mock handler,fixed translation and menu collapse, new version is 0.28

--- a/src/exportcomponents/src/header/components/Button/Button.scss
+++ b/src/exportcomponents/src/header/components/Button/Button.scss
@@ -2,7 +2,6 @@
 @import '../../styles/tools/color';
 @import '../../styles/settings/variables/other';
 @import '../../styles/settings/variables/typography';
-@import '../../styles/settings/variables/typography';
 
 .btn {
   $self: &;
@@ -11,8 +10,7 @@
   align-items: center;
   background: none;
   border: 0;
-  //color: get-color(black-coral-0);
-  color: var(--veera-color-sapphire-blue-10);;
+  color: get-color(black-coral-0);
   cursor: pointer;
   font: inherit;
   gap: get-spacing(rapla);
